--- a/BkE/package.json
+++ b/BkE/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "mssql": "^10.0.1",
-    "sequelize": "^6.35.0"
+    "sequelize": "^6.35.0",
+    "tedious": "^16.6.0"
   }
 }
